[gd_scene load_steps=2 format=3 uid="uid://dkf1fknpkwwb8"]

[ext_resource type="Script" uid="uid://nrhw8lpy8hmi" path="res://ResultsScreen.gd" id="1_e0ljs"]

[node name="ResultScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_e0ljs")

[node name="MainContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="MainContainer"]
layout_mode = 2
text = "Egzamino Rezultatai"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="MainContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ResultGrid" type="GridContainer" parent="MainContainer/ScrollContainer"]
layout_mode = 2
columns = 4

[node name="MenuButton" type="Button" parent="MainContainer"]
layout_mode = 2
text = "GRĮŽTI Į MENIU"
